# lifeplan_genius

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  manage.py  package.json  pegasus-config.yaml  pyproject.toml  webpack.config.js
.cursor/: mcp.json
.cursor/rules/: commands.mdc  javascript-guidelines.mdc  python-guidelines.mdc
api-client/: runtime.ts
api-client/apis/: ApiApi.ts  DashboardApi.ts  PegasusApi.ts  TeamsApi.ts
api-client/models/: AggregateEmployeeData.ts  CustomUser.ts  DepartmentEnum.ts  Employee.ts  Invitation.ts  JWT.ts  Login.ts  LoginResponse.ts  Membership.ts  OtpRequest.ts  PaginatedEmployeeList.ts  PaginatedInvitationList.ts  PaginatedTeamList.ts  PasswordChange.ts  PatchedCustomUser.ts  PatchedEmployee.ts  PatchedInvitation.ts  PatchedTeam.ts  Register.ts  RestAuthDetail.ts  RoleEnum.ts  Team.ts  TokenRefresh.ts  TokenVerify.ts  UserSignupStats.ts
apps/teams/migrations/: 0003_alter_membership_unique_together_flag.py
apps/users/: forms.py  views.py
apps/users/migrations/: 0002_customuser_language_customuser_timezone_and_more.py
apps/web/: meta.py  urls.py  views.py
assets/styles/: site-tailwind.css
assets/styles/pegasus/: tailwind.css
frontend/: package.json
frontend/src/components/: appnav.tsx
lifeplan_genius/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
static/css/: site-base.css  site-tailwind.css
static/js/: app-bundle.js  pegasus-bundle.js  site-base-bundle.js  site-bundle.js  vue-object-lifecycle-bundle.js
templates/web/components/: app_nav.html  dark_mode_selector.html  (+1 more)
(+1 files in other folders)
